# footswitch

./: .gitignore  .travis.yml  19-footswitch.rules  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.orig  README.md  common.c  common.h  debug.c  debug.h  footswitch  footswitch.c  footswitch.c.devices  getopt.h  scythe  scythe.c  scythe2.c
.github/workflows/: build.yml
HomebrewFormula/: footswitch.rb
debian/: changelog  control  footswitch-cli.udev  footswitch.udev
src/: common.c  debug.c  footswitch.c  footswitch1p.c
